# data_classification_example

./: .gitignore  README.md  pyproject.toml  setup.py
config/: config.ini  config_winequality.ini
dashboard/: cost.py  dashboard_main.py  data.py  models.py  summary.py
dataclassification/: analytics.py  config.py  plotting.py  settings.py  utils.py
scripts/: data_classification.py
