[tool.poetry]
name = "dataclassification"
version = "0.0.1"
description = "Exemplary data classification"
authors = ["Daniel Vogler"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
wheel = "^0.37.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
sklearn = "^0.0"
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
